--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,14 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dropdown_button2: ^2.3.6
   flutter:
     sdk: flutter
   google_fonts: ^5.1.0
+  intl: ^0.18.1
+  provider: ^6.0.5
 
 dev_dependencies:
-
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
